k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-service
  template:
    metadata:
      labels:
        app: backend-service
    spec:
      containers:
        - name: backend
          image: shivakumar2006/backend-service:latest
          imagePullPolicy: Always   # 👈 Important for local images
          ports:
            - containerPort: 8080
