k8s/cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: cart-deployment
  labels:
    app: cart-service
spec: 
  replicas: 1 
  selector: 
    matchLabels:
      app: cart-service 
  template: 
    metadata:
      labels:
        app: cart-service 
    spec: 
      containers:
        - name: cart-containers
          image: shivakumar2006/cart-service:latest
          ports: 
            - containerPort: 8082
