k8s/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: payment-deployment 
  labels: 
    app: payment 
spec:   
  replicas: 1 
  selector: 
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment 
    spec: 
      containers:
        - name: payment
          image: shivakumar2006/payment-service:latest
          ports: 
            - containerPort: 8085
