k8s/wishlist-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: wishlist-deployment
  labels:
    app: wishlist 
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: wishlist 
  template:
    metadata:
      labels:
        app: wishlist 
    spec:
      containers:
        - name: wishlist
          image: shivakumar2006/wishlist-service:latest
          ports: 
            - containerPort: 8083
