k8s/cart-service.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: cart-service
spec: 
  selector:
    app: cart-service 
  ports:  
    - protocol: TCP 
      port: 8082 
      targetPort: 8082
  type: ClusterIP
