k8s/payment-service.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: payment-service 
spec: 
  selector:
    app: payment 
  ports: 
    - protocol: TCP 
      port: 8085 
      targetPort: 8085 
  type: ClusterIP
