k8s/wishlist-service.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: wishlist-service 
spec:
  selector:
    app: wishlist 
  ports: 
    - protocol: TCP 
      port: 8083 
      targetPort: 8083
  type: ClusterIP
